clusters/home/public/bunker-game/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bunker
  namespace: public
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bunker
  template:
    metadata:
      labels:
        app: bunker
    spec:
      containers:
        - name: bunker
          image: kalpak44/bunker-party:059faa6fe5d21b06751df2480373226324ec0a2a
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
