clusters/home/public/bunker-game/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bunker
  namespace: public
spec:
  selector:
    app: bunker
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
